tests/Errors/PSR2/Files/EndFileNewline/NoneFound.php
<?php

declare(strict_types=1);

$foo = 'bar';

echo $foo;